--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="card2" style="width: 35rem;">
                         <div class="card-body">
                             <p class="card-text">Así como lo indica su nombre es un tipo de fotografía que se centra en los detalles dimiunitos de cosas o animales, ese algo debe llamar la atención de la persona a la que va dirigida, como se centra en un solo elemento su composición, y detalles deben ser cuidados para que no se haga plana o aburrida.</p>
-                        <img src="/image/tl4.jpg" class="card-img-top" alt="fotografia retrato">
+                        <img src="image/tl4.jpg" class="card-img-top" alt="fotografia retrato">
                         </div>
                     </div>
                 </li>
@@ -130,4 +130,4 @@
 </html>
 
             <!-- alt + z para ajustar el código en vs-->
-            
+            <!--Comentario de prueba-->
