--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="nav">
             <ul class="li-nav">
-                <li class="li-nav"><label for="btn-menu"><img src="/image/iconos/menu.png" alt="" width="60px" class="img-li-nav"></label></li>
+                <li class="li-nav"><label for="btn-menu"><img src="image/iconos/menu.png" alt="" width="60px" class="img-li-nav"></label></li>
                 <li class="li-nav" class="text-li-nav"><h1 class="h1">Fotografía</h1></li>
                 <li class="li-nav"></li>
             </ul>
@@ -30,7 +30,7 @@
                         <a href="/pages/tipos.html">Tipos de fotografía</a>
                         <a href="/pages/referentes.html">Referentes</a>
                     </nav>
-                    <label for="btn-menu"><img src="/image/iconos/menu.png" alt="" width="60px"></label>
+                    <label for="btn-menu"><img src="image/iconos/menu.png" alt="" width="60px"></label>
                 </div>
             </div>
 
@@ -38,7 +38,7 @@
         <div class="contenedor-inicio">
             <!-- Descripción de la pag-->
             <p class="text-inicio">La fotografía es el arte de capturar un instante usando el reflejo de la luz para proyectar una imagen, esta imagen es el resultado de la forma en cómo un lente, sensor, placa, papel etc. recibe la información y la transforma en lo que estemos viendo o lo que queremos que sea visto.</p>
-            <img src="/image/inicio.jpg" alt="fotografía de cámara detrás del texto" class="foto-inicio">
+            <img src="image/inicio.jpg" alt="fotografía de cámara detrás del texto" class="foto-inicio">
         </div>
     </main>
     <section>
@@ -47,7 +47,7 @@
             <ul class="li-card">
                 <li class="li-card">
                     <div class="card" style="width: 30rem;">
-                        <img src="/image/tl1.jpg" class="card-img-top" alt="fotografia retrato">
+                        <img src="image/tl1.jpg" class="card-img-top" alt="fotografia retrato">
                         <div class="card-body">
                             <p class="card-text">Arquímedes un físico del 212 a. C. se percató de que la luz que entraba por un agujero diminuto a un cuarto oscuro reflejaba la imágen de lo que se veía afuera de este. El pintor Leonardo Da Vinci años más tarde durante el siglo XV fue uno de los artistas que utilizaba esta ténica para sus pinturas, ya que la imagen proyectada mantenía su forma y color, y de esta forma.</p>
                         </div>
@@ -55,7 +55,7 @@
                 </li>
                 <li class="li-card">
                     <div class="card" style="width: 30rem;">
-                        <img src="/image/tl3.jpg" class="card-img-top" alt="fotografia retrato">
+                        <img src="image/tl3.jpg" class="card-img-top" alt="fotografia retrato">
                         <div class="card-body">
                         <p class="card-text">Así como lo indica su nombre es un tipo de fotografía que se centra en los detalles dimiunitos de cosas o animales, ese algo debe llamar la atención de la persona a la que va dirigida, como se centra en un solo elemento su composición, y detalles deben ser cuidados para que no se haga plana o aburrida.</p>
                         </div>
@@ -63,7 +63,7 @@
                 </li>
                 <li class="li-card">
                     <div class="card" style="width: 30rem;">
-                        <img src="/image/tl5.jpg" class="card-img-top" alt="fotografia retrato">
+                        <img src="image/tl5.jpg" class="card-img-top" alt="fotografia retrato">
                         <div class="card-body">
                         <p class="card-text">La fotografía abstracta es uno de los tipos más modernos de fotografía. Se puede decir que sólo hay una regla en la fotografía abstracta y esa regla es que no hay reglas. Se trata de un disparo normal y del ángulo y enfoque correctos para crear una obra maestra de colores, diseños y texturas.</p>
                         </div>
@@ -77,7 +77,7 @@
                     <div class="card2" style="width: 35rem;">
                         <div class="card-body">
                             <p class="card-text">Arquímedes un físico del 212 a. C. se percató de que la luz que entraba por un agujero diminuto a un cuarto oscuro reflejaba la imágen de lo que se veía afuera de este. El pintor Leonardo Da Vinci años más tarde durante el siglo XV fue uno de los artistas que utilizaba esta ténica para sus pinturas, ya que la imagen proyectada mantenía su forma y color, y de esta forma.</p>
-                            <img src="/image/tl2.jpg" class="card-img-top" alt="fotografia retrato">
+                            <img src="image/tl2.jpg" class="card-img-top" alt="fotografia retrato">
                         </div>
                     </div>
                 </li>
@@ -105,10 +105,10 @@
                 <p class="titulo-redes">Redes Sociales</p>
             </div>
             <ul class="li-redes">
-                <li class="li-redes"><img src="/image/iconos/tw.png" alt="twitter" class="img-redes"></li>
-                <li class="li-redes"><img src="/image/iconos/face.png" alt="facebook" class="img-redes"></li>
-                <li class="li-redes"><img src="/image/iconos/ig.png" alt="instagram" class="img-redes"></li>
-                <li class="li-redes"><img src="/image/iconos/in.png" alt="linkedin" class="img-redes"></li>
+                <li class="li-redes"><img src="image/iconos/tw.png" alt="twitter" class="img-redes"></li>
+                <li class="li-redes"><img src="image/iconos/face.png" alt="facebook" class="img-redes"></li>
+                <li class="li-redes"><img src="image/iconos/ig.png" alt="instagram" class="img-redes"></li>
+                <li class="li-redes"><img src="image/iconos/in.png" alt="linkedin" class="img-redes"></li>
             </ul>
         </article>
     </section>
@@ -116,7 +116,7 @@
     <footer>
         <ul class="li-footer">
             <li class="li-footer">
-                <img src="/image/iconos/footer.png" alt="icono cámara" class="img-footer">
+                <img src="image/iconos/footer.png" alt="icono cámara" class="img-footer">
             </li>
             <li class="li-footer">
                 <p>Yeray Guachetá © 2022</p>
