--- a/pages/referentes.html
+++ b/pages/referentes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/nav-foot.css">
-    <link rel="stylesheet" href="/pages/estreferentes.css">
+    <link rel="stylesheet" href="nav-foot.css">
+    <link rel="stylesheet" href="pages/estreferentes.css">
     <title>Fotografía Referentes</title>
 
 </head>
