Corrección etiquetas por rutas absolutas y relativas

--- a/pages/referentes.html
+++ b/pages/referentes.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="nav-foot.css">
-    <link rel="stylesheet" href="pages/estreferentes.css">
+    <link rel="stylesheet" href="../nav-foot.css">
+    <link rel="stylesheet" href="estreferentes.css">
     <title>Fotografía Referentes</title>
 
 </head>
@@ -14,7 +14,7 @@
     <header>
         <nav class="nav">
             <ul class="li-nav">
-                <li class="li-nav"><label for="btn-menu"><img src="image/iconos/menu.png" alt="" width="60px" class="img-li-nav"></label></li>
+                <li class="li-nav"><label for="btn-menu"><img src="../image/iconos/menu.png" alt="" width="60px" class="img-li-nav"></label></li>
                 <li class="li-nav" class="text-li-nav"><h1 class="h1">Fotografía</h1></li>
                 <li class="li-nav"></li>
                 </ul>
@@ -26,7 +26,7 @@
             <!-- Descripción de la pag-->
             <h1 class="text-tit-inicio">Referentes</h1>
             <p class="text-inicio">En esta sección hablaremos un poco de algunos referentes más importantes conocidos dentro del mundo de la fotografía, ya sea por los trabajos que han desempeñado, el mensaje que han logrado transmitir, o las técnicas en las que se han desenvuelto incluyendo una galería diminuta en cada uno de ellos donde podemos evidenciar algunas de sus obras más representativas.</p>
-            <img src="image/referentes/inicio-ref.png" alt="fotografía de cámara detrás del texto" class="foto-inicio">
+            <img src="../image/referentes/inicio-ref.png" alt="fotografía de cámara detrás del texto" class="foto-inicio">
         </div>
         <br>
         <br>
@@ -40,13 +40,13 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td><img src="image/referentes/Sebas.png" alt="Fotografía de Sebastião Salgado" class="img-table"></td>
+                    <td><img src="../image/referentes/Sebas.png" alt="Fotografía de Sebastião Salgado" class="img-table"></td>
                     <td class="text-table">Nació el 8 de febrero de 1944 en Aimorés, Minas Gerais de Brasil y se crió, junto a sus siete hermanas, entre vastas selvas atlánticas. Estudió la carrera de economía en Brasil y luego se trasladó a Europa, donde fue economista durante muchos años. Cuando trabajaba para la Organización Mundial del Café, tenía que viajar a África muy a menudo: en esos viajes se llevaba la cámara y fue entonces cuando se enamoró de la fotografía.
                         Conocido como fotógrafo social o fotorreportero, Sebastião Salgado es mucho más. Su legado se extiende más allá de la fotografía removiendo conciencias y revirtiendo la forestación.
                         <br>
                         Creó su propio estilo: fotografías en blanco y negro, con una luz natural que parecía demasiado perfecta para ser real. Salgado fotografió la destrucción de la guerra, refugiados pasando hambre, trabajadores explotados en la minas de oro, etc.
                     </td>
-                    <td><img src="image/referentes/seb1.png" alt="" class="img-table-carrusel">
+                    <td><img src="../image/referentes/seb1.png" alt="" class="img-table-carrusel">
                     <p class="text-carrusel">Si quieres inverstigar un poco más sobre este autor aquí encontrarás unas fuentes que te pueden interesar</p>
                     </td>
                 </tr>
@@ -61,12 +61,12 @@
                     <td></td>
                 </tr>
                 <tr>
-                    <td><img src="image/referentes/vivi.png" alt="Fotografía de Sebastião Salgado" class="img-table"></td>
+                    <td><img src="../image/referentes/vivi.png" alt="Fotografía de Sebastião Salgado" class="img-table"></td>
                     <td class="text-table">Nació el 1 de febrero de 1926 en Nueva York. Hija de madre francesa y padre austriaco. (Aunque siempre ocultó estos datos. Estos y todos los referentes a su vida. Cuentan quienes la conocieron que siempre pensaron que era europea y tenía un falso acento francés).
                     <br>
                     Es una de las fotógrafas más influyentes de nuestro tiempo tras pasar toda una vida tomando fotografías desde el más absoluto anonimato. Niñera y empleada del hogar interna de profesión, llevó una vida errante, de casa en casa, a las que acudía cargando decenas de maletas abarrotadas de rollos de negativos por revelar, con fotografías que tomaba de forma impulsiva mientras desempeñaba su labor de cuidadora.                        
                     </td>
-                    <td><img src="image/referentes/viv1.png" alt="" class="img-table-carrusel">
+                    <td><img src="../image/referentes/viv1.png" alt="" class="img-table-carrusel">
                     <p class="text-carrusel">Si quieres inverstigar un poco más sobre este autor aquí encontrarás unas fuentes que te pueden interesar</p>
                     </td>
                 </tr>
@@ -81,14 +81,14 @@
                         <td></td>
                     </tr>
                     <tr>
-                        <td><img src="image/referentes/Henri.png" alt="Fotografía de Sebastião Salgado" class="img-table"></td>
+                        <td><img src="../image/referentes/Henri.png" alt="Fotografía de Sebastião Salgado" class="img-table"></td>
                         <td class="text-table">Nació en el seno de una familia burguesa el 22 de agosto de 1908 en la localidad francesa de ‘Chanteloup en Brie’, a 30 kilómetros de París, aunque se crió en París. Está considerado uno de los fotógrafos más influyentes de todos los tiempos. Testigo de la evolución del ser humano a lo largo de todo el siglo XX, con su cámara ha registrado la industrialización, la modernización de las ciudades, a las personalidades más importantes de su época, así como los conflictos políticos y sociales más revolucionarios de la historia reciente.
                         <br>
                         Es autor del libro ‘El momento decisivo‘, considerado hoy día como ‘la biblia’ de la fotografía de calle  por muchos fotógrafos.
                         <br>
                         Además, fue uno de los fundadores de la agencia Magnum y uno de sus máximos representantes durante toda su vida.
                         </td>
-                        <td><img src="image/referentes/hen1.png" alt="" class="img-table-carrusel">
+                        <td><img src="../image/referentes/hen1.png" alt="" class="img-table-carrusel">
                         <p class="text-carrusel">Si quieres inverstigar un poco más sobre este autor aquí encontrarás unas fuentes que te pueden interesar</p>
                         </td>
                     </tr>
@@ -101,10 +101,10 @@
                         <p class="titulo-redes">Redes Sociales</p>
                     </div>
                     <ul class="li-redes">
-                        <li class="li-redes"><img src="image/iconos/tw.png" alt="twitter" class="img-redes"></li>
-                        <li class="li-redes"><img src="image/iconos/face.png" alt="facebook" class="img-redes"></li>
-                        <li class="li-redes"><img src="image/iconos/ig.png" alt="instagram" class="img-redes"></li>
-                        <li class="li-redes"><img src="image/iconos/in.png" alt="linkedin" class="img-redes"></li>
+                        <li class="li-redes"><img src="../image/iconos/tw.png" alt="twitter" class="img-redes"></li>
+                        <li class="li-redes"><img src="../image/iconos/face.png" alt="facebook" class="img-redes"></li>
+                        <li class="li-redes"><img src="../image/iconos/ig.png" alt="instagram" class="img-redes"></li>
+                        <li class="li-redes"><img src="../image/iconos/in.png" alt="linkedin" class="img-redes"></li>
                     </ul>
                 </article>
             </section>
@@ -119,7 +119,7 @@
                         <a href="/pages/tipos.html">Tipos de fotografía</a>
                         <a href="/pages/referentes.html">Referentes</a>
                     </nav>
-                    <label for="btn-menu"><img src="image/iconos/menu.png" alt="" width="60px"></label>
+                    <label for="btn-menu"><img src="../image/iconos/menu.png" alt="" width="60px"></label>
                 </div>
             </div>
 
@@ -127,7 +127,7 @@
             <footer>
                 <ul class="li-footer">
                     <li class="li-footer">
-                        <img src="image/iconos/footer.png" alt="icono cámara" class="img-footer">
+                        <img src="../image/iconos/footer.png" alt="icono cámara" class="img-footer">
                     </li>
                     <li class="li-footer">
                         <p>Yeray Guachetá © 2022</p>
