Corrección de rutas relativas y absolutas

--- a/pages/referentes.html
+++ b/pages/referentes.html
@@ -115,9 +115,9 @@
             <div class="container-menu">
                 <div class="cont-menu">
                     <nav>
-                        <a href="/index.html">Inicio</a>
-                        <a href="/pages/tipos.html">Tipos de fotografía</a>
-                        <a href="/pages/referentes.html">Referentes</a>
+                        <a href="../index.html">Inicio</a>
+                        <a href="../pages/tipos.html">Tipos de fotografía</a>
+                        <a href="../pages/referentes.html">Referentes</a>
                     </nav>
                     <label for="btn-menu"><img src="../image/iconos/menu.png" alt="" width="60px"></label>
                 </div>
