--- a/pages/tipos.html
+++ b/pages/tipos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="pages/esttipos.css">
+    <link rel="stylesheet" href="esttipos.css">
     <link rel="stylesheet" href="../nav-foot.css">
     <title>Fotografía Tipos</title>
 
@@ -27,9 +27,9 @@
             <div class="container-menu">
                 <div class="cont-menu">
                     <nav>
-                        <a href="/index.html">Inicio</a>
-                        <a href="/pages/tipos.html">Tipos de fotografía</a>
-                        <a href="/pages/referentes.html">Referentes</a>
+                        <a href="../index.html">Inicio</a>
+                        <a href="../pages/tipos.html">Tipos de fotografía</a>
+                        <a href="../pages/referentes.html">Referentes</a>
                     </nav>
                     <label for="btn-menu"><img src="../image/iconos/menu.png" alt="" width="60px"></label>
                 </div>
