Corrección de rutas relativas y absolutas 3

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
         <article>
             <!-- Tipos y Referentes -->
             <ul class="li-tip-ref">
-                <li class="titulo" class="li-tip-ref"><a href="./pages/tipos.html"><div class="dos-botones">Tipos de fotografía</div></a></li>
-                <li class="titulo" class="li-tip-ref"><a href="./pages/referentes.html"><div class="dos-botones">Referentes</div></a></li>
+                <li class="titulo" class="li-tip-ref"><a href="pages/tipos.html"><div class="dos-botones">Tipos de fotografía</div></a></li>
+                <li class="titulo" class="li-tip-ref"><a href="pages/referentes.html"><div class="dos-botones">Referentes</div></a></li>
             </ul>
         </article>
         <!--Redes sociales-->
